--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         <main> 
             <section class = 'location'>
                 <div class = 'city'> Boston, MA</div>
-                <div class = 'date'>Thursday, 7th of April 2022</div>
+                <div class = 'date'></div>
             </section>
             <div class="current">
                 <div class="temp">40<span>°f</span></div>
